--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "dev:frontend": "npm run start --prefix frontend",
     "dev:backend": "nodemon backend/server.js",
     "dev:both": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-    "clean": "rm -rf frontend/build && rm -rf backend/node_modules && rm -rf frontend/node_modules"
+    "clean": "rimraf frontend/build backend/node_modules frontend/node_modules",
+    "deploy:build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "deploy:start": "cd backend && npm start"
   },
   "type": "module",
   "keywords": [],
@@ -26,7 +28,8 @@
     "mongoose": "^8.15.1"
   },
   "devDependencies": {
+    "concurrently": "^9.1.0",
     "nodemon": "^3.1.10",
-    "concurrently": "^9.1.0"
+    "rimraf": "^6.0.1"
   }
 }
