--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "cra-template-pwa": "2.0.0",
     "express-validator": "^7.2.1",
