--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev:backend": "nodemon backend/server.js",
     "dev:both": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "clean": "rimraf frontend/build backend/node_modules frontend/node_modules",
-    "deploy:build": "npm cache clean --force && npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
+    "deploy:build": "npm cache clean --force && npm install --prefix backend && npm install --prefix frontend && npm run build:prod --prefix frontend",
     "deploy:start": "cd backend && npm start"
   },
   "type": "module",
